Реализация отдельных сервисов для ItemFeature и CategoryRelation с методами create.. и update.. . Написание модульных тестов для классов ItemFeature и CategoryRelation.